--- a/.npmrc
+++ b/.npmrc
@@ -3,10 +3,37 @@ disturl=https://registry.npm.taobao.org/node
 nvm_nodejs_org_mirror=https://cdn.npm.taobao.org/dist/node
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
 fse_binary_host_mirror=https://registry.npm.taobao.org/fsevents
-phantomjs_cdnurl=https://npm.taobao.org/dist/phantomjs 
-chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver 
-operadriver_cdnurl=https://npm.taobao.org/mirrors/operadriver 
+phantomjs_cdnurl=https://npm.taobao.org/dist/phantomjs
+chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver
+operadriver_cdnurl=https://npm.taobao.org/mirrors/operadriver
 electron_mirror=http://npm.taobao.org/mirrors/electron
 puppeteer_download_host=https://cdn.npm.taobao.org/dist
 nwjs_urlbase=https://cdn.npm.taobao.org/dist/nwjs/v
 flow_binary_mirror=https://github.com/facebook/flow/releases/download/v
+
+
+sharp_binary_host=https://npm.taobao.org/mirrors/sharp
+sharp_libvips_binary_host=https://npm.taobao.org/mirrors/sharp-libvips
+
+couchbase-binary-host-mirror=https://npm.taobao.org/mirrors/couchbase/v{version}
+debug-binary-host-mirror=https://npm.taobao.org/mirrors/node-inspector
+fuse-bindings-binary-host-mirror=https://npm.taobao.org/mirrors/fuse-bindings/v{version}
+git4win-mirror=https://npm.taobao.org/mirrors/git-for-windows
+gl-binary-host-mirror=https://npm.taobao.org/mirrors/gl/v{version}
+
+grpc-node-binary-host-mirror=https://npm.taobao.org/mirrors
+hackrf-binary-host-mirror=https://npm.taobao.org/mirrors/hackrf/v{version}
+leveldown-binary-host-mirror=https://npm.taobao.org/mirrors/leveldown/v{version}
+leveldown-hyper-binary-host-mirror=https://npm.taobao.org/mirrors/leveldown-hyper/v{version}
+mknod-binary-host-mirror=https://npm.taobao.org/mirrors/mknod/v{version}
+node-sqlite3-binary-host-mirror=https://npm.taobao.org/mirrors
+node-tk5-binary-host-mirror=https://npm.taobao.org/mirrors/node-tk5/v{version}
+nodegit-binary-host-mirror=https://npm.taobao.org/mirrors/nodegit/v{version}/
+profiler-binary-host-mirror=https://npm.taobao.org/mirrors/node-inspector/
+python-mirror=https://npm.taobao.org/mirrors/python
+rabin-binary-host-mirror=https://npm.taobao.org/mirrors/rabin/v{version}
+sodium-prebuilt-binary-host-mirror=https://npm.taobao.org/mirrors/sodium-prebuilt/v{version}
+sqlite3-binary-site=https://npm.taobao.org/mirrors/sqlite3
+utf-8-validate-binary-host-mirror=https://npm.taobao.org/mirrors/utf-8-validate/v{version}
+utp-native-binary-host-mirror=https://npm.taobao.org/mirrors/utp-native/v{version}
+zmq-prebuilt-binary-host-mirror=https://npm.taobao.org/mirrors/zmq-prebuilt/v{version}
