--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,8 @@
 registry=https://registry.npm.taobao.org
 disturl=https://registry.npm.taobao.org/node
 nvm_nodejs_org_mirror=https://cdn.npm.taobao.org/dist/node
+PLAYWRIGHT_DOWNLOAD_HOST=https://registry.npmmirror.com/-/binary/playwright
+canvas_binary_host_mirror=https://registry.npmmirror.com/-/binary/canvas/
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
 fse_binary_host_mirror=https://registry.npm.taobao.org/fsevents
 phantomjs_cdnurl=https://npm.taobao.org/dist/phantomjs
